--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:postgresql://localhost/libra
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.session.jdbc.initialize-schema=always
+spring.jpa.hibernate.ddl-auto = update
+
+## App Properties
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 14400000
+
+spring.main.allow-bean-definition-overriding=true
