Attempt number two

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.session.jdbc.initialize-schema=always
 spring.jpa.hibernate.ddl-auto = update
 
 spring.main.allow-bean-definition-overriding=true
+management.security.enabled=false
+
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 14400000
