Maybe it's correct

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,12 @@ spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.session.jdbc.initialize-schema=always
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-bean-definition-overriding=true
 management.security.enabled=false
 
-app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 14400000
+jwt.expirationAccessToken=3600000
+jwt.expirationRefreshToken=2592000000
+jwt.secretKey=SeCreTKey
+
