--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:postgresql://localhost/libra
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.session.jdbc.initialize-schema=always
+spring.jpa.hibernate.ddl-auto=update
+
+spring.main.allow-bean-definition-overriding=true
+management.security.enabled=false
+
+jwt.expirationAccessToken=3600000
+jwt.expirationRefreshToken=2592000000
+jwt.secretKey=SeCreTKey
 
